# compilador

./: CMakeLists.txt  lex.yy.c  lexico.l  main.cpp  sintactico.tab.c  sintactico.tab.h  sintactico.y
analizador_lexico/: gestionErrores.c  lex.yy.c  lex.yy.h
